# IMU_task

./: odompub.py
Acc variance/: Acc_variance.cpp  Accelerometer_sensor_data.yaml  imu_AccData.py  imu_odom_ACCdata.py  my_program
Gyro variance/: GyroData.py  Gyro_odom_DataTrial.py  angular_velocity_vector.yaml  cov.cpp  my_program
IMU-Micro-adafruit/: IMU-Micro-adafruit.ino
ROSandIMU/: ROSandIMU.ino
Rotation covariance/: Imu_angles.yaml  RotData.py  RotDataAtspecificAngles.py  Yawcov.cpp  cov.cpp  my_program  my_yaw_program
Test results/IMU on robot readings/: Gyro_sensor_data.yaml
Test results/On table IMU readings/: Acc_sensor_data.yaml  Gyro_sensor_data.yaml  rotation_vector_data.yaml
Test results/real values from encoder/: angular_velocity_vector.yaml
Testing workspace/: acc_vector.yaml  angular_velocity_vector.yaml  frames.gv  rotation_vector.yaml
Testing workspace/devel/: .catkin  setup.sh
Testing workspace/devel/lib/: libGeographic.so.14.0.1
Testing workspace/devel/lib/pkgconfig/: catkin_simple.pc  geodesy.pc  geographic_lib.pc  geographic_msgs.pc  robot_localization.pc  roslint.pc  test.pc  unique_id.pc  uuid_msgs.pc
Testing workspace/devel/lib/test/: calculated_Acc  (+2 more)
Testing workspace/devel/sbin/: geographiclib-get-geoids  geographiclib-get-magnetic
Testing workspace/src/: frames.gv  odomForEkf.py
Testing workspace/src/test/: CMakeLists.txt  package.xml
Testing workspace/src/test/src/: Actuall_angle.cpp  Actuall_rotaion_speed.cpp  actuall_base_acc.cpp  description. README
moreReportsAccGyroRot/: moreReportsAccGyroRot.ino
(+37 files in other folders)
