<package format="2">
  <name>test</name>
  <version>0.0.1</version>
  <description>test</description>

  <maintainer email="your_email@example.com">Your Name</maintainer>
  <license>BSD</license>

  <!-- <depend>roscpp</depend>
  <depend>std_msgs</depend>
  <depend>yaml-cpp</depend> -->

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roscpp</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>yaml-cpp</build_depend>

  <build_export_depend>roscpp</build_export_depend>
  <build_export_depend>std_msgs</build_export_depend>
  <build_export_depend>yaml-cpp</build_export_depend>

  <exec_depend>roscpp</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>yaml-cpp</exec_depend>

  <!-- Add any other dependencies here -->

</package>
